expose proto generated files as a2apb package

--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -17,15 +17,15 @@ managed:
   override:
     - file_option: go_package
       path: a2a.proto
-      value: github.com/a2aproject/a2a/grpc
+      value: github.com/a2aproject/a2a-go/a2apb
 
 plugins:
   - remote: buf.build/protocolbuffers/go
-    out: grpc
+    out: a2apb
     opt:
       - paths=source_relative
   
   - remote: buf.build/grpc/go
-    out: grpc
+    out: a2apb
     opt:
       - paths=source_relative
