--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,13 +24,10 @@ jobs:
       uses: ./.github/actions/setup
 
     - name: Tidy
-      run: |
-        go mod tidy
-        git diff --exit-code go.mod
-        git diff --exit-code go.sum
+      run: go mod tidy -diff
       
     - name: Build
-      run:  go build -mod=readonly -v -trimpath ./...
+      run: go build -mod=readonly -v ./...
 
     - name: Test
       run: go test -mod=readonly -v ./...
